# swift-build-examples

./: README.md
HelloWorld-CMake/: CMakeLists.txt
HelloWorld-CMake/Source/: CMakeLists.txt
HelloWorld-CMake/Source/CCore/: CMakeLists.txt
HelloWorld-CMake/Source/HelloWorld/: CMakeLists.txt
HelloWorld-CMake/Source/HelloWorldCore/: CMakeLists.txt
HelloWorld-CMake/Tests/: CMakeLists.txt
HelloWorld-CMake/Tests/TestHelloWorldCore/: CMakeLists.txt
Interop-CMake/: CMakeLists.txt  README.md  foo.swift  main.c
